Equalizer added to mini-sidebar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.music-bar {
+  @apply animate-music w-0.5 bg-gray-600 group-hover:bg-black;
+}
