--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .pause {
+    animation-play-state: paused;
+  }
+  .w-inherit {
+    width: inherit;
+  }
+  .h-inherit {
+    height: inherit;
+  }
+}
