--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,15 +16,15 @@
     @apply mx-auto w-full max-w-4xl;
   }
   .space-border {
-    @apply rounded-[2rem] border border-gray-200 p-2;
+    @apply rounded-[2rem] border border-gray-200 p-2 dark:border-gray-700;
   }
   .hover-scale {
-    @apply transition-transform duration-1000 ease-[cubic-bezier(0.5,0.25,0,1)] hover:scale-125;
+    @apply transition-transform duration-1000 ease-[cubic-bezier(0.5,0.25,0,1)] hover:scale-125 dark:border-gray-700;
   }
 }
 
 h1,
 h2,
 h3 {
-  @apply font-bold tracking-tight text-gray-900;
+  @apply font-bold tracking-tight text-gray-900 dark:text-gray-50;
 }
