Made responsive UI of all pages

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,10 +18,24 @@
   .space-border {
     @apply rounded-[2rem] border border-gray-200 p-2  dark:border-gray-700;
   }
+  /* .hover-scale {
+    @apply transition-transform duration-1000 ease-in-out hover:scale-125;
+  } */
 }
 
-h1,
-h2,
-h3 {
-  @apply font-bold tracking-tight text-gray-900 dark:text-gray-50;
+@layer base {
+  h1,
+  h2,
+  h3 {
+    @apply font-bold tracking-tight text-gray-900 dark:text-gray-50;
+  }
+  h1 {
+    @apply text-5xl sm:text-6xl md:text-7xl lg:text-8xl xl:text-9xl;
+  }
+  h3 {
+    @apply text-3xl;
+  }
+  p {
+    @apply text-gray-600 dark:text-gray-300;
+  }
 }
